--- a/zeror/Cargo.toml
+++ b/zeror/Cargo.toml
@@ -24,5 +24,5 @@ serde = { version = "1.0", default-features = false, features = ["derive"] }
 rsklearn = { version = "0.1.0", path = ".." }
 
 [dev-dependencies]
-rsklearn-datasets = { version = "0.1.0", path = "../datasets", features = ["diabetes"] }
+rsklearn-datasets = { version = "0.1.0", path = "../datasets", features = ["iris"] }
 approx = "0.3.2"
