--- a/dstump/Cargo.toml
+++ b/dstump/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 repository = "https://github.com/SoichiroOta/rsklearn"
 readme = "README.md"
 
-keywords = ["machine-learning", "rsklearn", "ai", "ml", "zero-rule"]
+keywords = ["machine-learning", "rsklearn", "ai", "ml", "decision-stump"]
 categories = ["algorithms", "mathematics", "science"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
